--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -339,6 +339,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\stringarray.h" />
     <ClInclude Include="include\subracecat.h" />
     <ClInclude Include="include\targetslist.h" />
+    <ClInclude Include="include\taskmanagerholder.h" />
     <ClInclude Include="include\textandid.h" />
     <ClInclude Include="include\unitbranchcat.h" />
     <ClInclude Include="include\unitcat.h" />
