--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -295,6 +295,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\menunewskirmishsingle.h" />
     <ClInclude Include="include\midcommandqueue2.h" />
     <ClInclude Include="include\middatacache.h" />
+    <ClInclude Include="include\middropmanager.h" />
     <ClInclude Include="include\midgard.h" />
     <ClInclude Include="include\midgardid.h" />
     <ClInclude Include="include\midgardmsgbox.h" />
