--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -329,6 +329,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\presentation.h" />
     <ClInclude Include="include\racecategory.h" />
     <ClInclude Include="include\racetype.h" />
+    <ClInclude Include="include\resetstackext.h" />
     <ClInclude Include="include\restrictions.h" />
     <ClInclude Include="include\scenariodata.h" />
     <ClInclude Include="include\scenariodataarray.h" />
