--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -580,6 +580,9 @@
     <ClInclude Include="include\midcommandqueue2.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\resetstackext.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\middropmanager.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
