--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -327,6 +327,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\netdplaysession.h" />
     <ClInclude Include="include\ordercat.h" />
     <ClInclude Include="include\phase.h" />
+    <ClInclude Include="include\phasegame.h" />
     <ClInclude Include="include\playerbuildings.h" />
     <ClInclude Include="include\popupdialoginterf.h" />
     <ClInclude Include="include\position.h" />
