--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -266,6 +266,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\deathanimcat.h" />
     <ClInclude Include="include\dialoginterf.h" />
     <ClInclude Include="include\difficultylevel.h" />
+    <ClInclude Include="include\draganddropinterf.h" />
     <ClInclude Include="include\dynamiccast.h" />
     <ClInclude Include="include\editor.h" />
     <ClInclude Include="include\fortification.h" />
