--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -598,6 +598,9 @@
     <ClInclude Include="include\resetstackext.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\middragdropinterf.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\draganddropinterf.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
