--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -296,6 +296,8 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\item.h" />
     <ClInclude Include="include\itembase.h" />
     <ClInclude Include="include\itemcategory.h" />
+    <ClInclude Include="include\itemequipment.h" />
+    <ClInclude Include="include\itemexequipment.h" />
     <ClInclude Include="include\linkedlist.h" />
     <ClInclude Include="include\listbox.h" />
     <ClInclude Include="include\log.h" />
