--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -294,10 +294,15 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\interffullscreen.h" />
     <ClInclude Include="include\interfmanager.h" />
     <ClInclude Include="include\item.h" />
+    <ClInclude Include="include\itemarmor.h" />
+    <ClInclude Include="include\itembanner.h" />
     <ClInclude Include="include\itembase.h" />
     <ClInclude Include="include\itemcategory.h" />
     <ClInclude Include="include\itemequipment.h" />
     <ClInclude Include="include\itemexequipment.h" />
+    <ClInclude Include="include\itemjewelry.h" />
+    <ClInclude Include="include\itemtravelitem.h" />
+    <ClInclude Include="include\itemweapon.h" />
     <ClInclude Include="include\linkedlist.h" />
     <ClInclude Include="include\listbox.h" />
     <ClInclude Include="include\log.h" />
