--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -297,6 +297,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\itemarmor.h" />
     <ClInclude Include="include\itembanner.h" />
     <ClInclude Include="include\itembase.h" />
+    <ClInclude Include="include\itembattle.h" />
     <ClInclude Include="include\itemcategory.h" />
     <ClInclude Include="include\itemequipment.h" />
     <ClInclude Include="include\itemexequipment.h" />
