--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -302,6 +302,8 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\itemequipment.h" />
     <ClInclude Include="include\itemexequipment.h" />
     <ClInclude Include="include\itemjewelry.h" />
+    <ClInclude Include="include\itemorb.h" />
+    <ClInclude Include="include\itemtalisman.h" />
     <ClInclude Include="include\itemtravelitem.h" />
     <ClInclude Include="include\itemweapon.h" />
     <ClInclude Include="include\linkedlist.h" />
