--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -301,8 +301,10 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\itemcategory.h" />
     <ClInclude Include="include\itemequipment.h" />
     <ClInclude Include="include\itemexequipment.h" />
+    <ClInclude Include="include\itemexspell.h" />
     <ClInclude Include="include\itemjewelry.h" />
     <ClInclude Include="include\itemorb.h" />
+    <ClInclude Include="include\itemspell.h" />
     <ClInclude Include="include\itemtalisman.h" />
     <ClInclude Include="include\itemtravelitem.h" />
     <ClInclude Include="include\itemweapon.h" />
