--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -304,9 +304,11 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\itemexspell.h" />
     <ClInclude Include="include\itemjewelry.h" />
     <ClInclude Include="include\itemorb.h" />
+    <ClInclude Include="include\itemscroll.h" />
     <ClInclude Include="include\itemspell.h" />
     <ClInclude Include="include\itemtalisman.h" />
     <ClInclude Include="include\itemtravelitem.h" />
+    <ClInclude Include="include\itemwand.h" />
     <ClInclude Include="include\itemweapon.h" />
     <ClInclude Include="include\linkedlist.h" />
     <ClInclude Include="include\listbox.h" />
