Add structures for boost potions

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -306,6 +306,8 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\itemjewelry.h" />
     <ClInclude Include="include\itemorb.h" />
     <ClInclude Include="include\itempotionboost.h" />
+    <ClInclude Include="include\itempotionboostperm.h" />
+    <ClInclude Include="include\itempotionboosttemp.h" />
     <ClInclude Include="include\itemscroll.h" />
     <ClInclude Include="include\itemspell.h" />
     <ClInclude Include="include\itemtalisman.h" />
