--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -302,12 +302,14 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\itemequipment.h" />
     <ClInclude Include="include\itemexequipment.h" />
     <ClInclude Include="include\itemexpotionboost.h" />
+    <ClInclude Include="include\itemexpotionheal.h" />
     <ClInclude Include="include\itemexspell.h" />
     <ClInclude Include="include\itemjewelry.h" />
     <ClInclude Include="include\itemorb.h" />
     <ClInclude Include="include\itempotionboost.h" />
     <ClInclude Include="include\itempotionboostperm.h" />
     <ClInclude Include="include\itempotionboosttemp.h" />
+    <ClInclude Include="include\itempotionheal.h" />
     <ClInclude Include="include\itemscroll.h" />
     <ClInclude Include="include\itemspell.h" />
     <ClInclude Include="include\itemtalisman.h" />
