--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -312,6 +312,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\itempotionheal.h" />
     <ClInclude Include="include\itempotionrevive.h" />
     <ClInclude Include="include\itemscroll.h" />
+    <ClInclude Include="include\itemspecial.h" />
     <ClInclude Include="include\itemspell.h" />
     <ClInclude Include="include\itemtalisman.h" />
     <ClInclude Include="include\itemtravelitem.h" />
