Add CItemValuable structure

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -658,6 +658,9 @@
     <ClInclude Include="include\itembase.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\itemvaluable.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\itemspecial.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
