--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -316,6 +316,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\itemspell.h" />
     <ClInclude Include="include\itemtalisman.h" />
     <ClInclude Include="include\itemtravelitem.h" />
+    <ClInclude Include="include\itemvaluable.h" />
     <ClInclude Include="include\itemwand.h" />
     <ClInclude Include="include\itemweapon.h" />
     <ClInclude Include="include\linkedlist.h" />
