--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -343,6 +343,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\midgardobjectmap.h" />
     <ClInclude Include="include\midgardscenariomap.h" />
     <ClInclude Include="include\midinventory.h" />
+    <ClInclude Include="include\miditem.h" />
     <ClInclude Include="include\midmsgboxbuttonhandler.h" />
     <ClInclude Include="include\midmsgboxbuttonhandlerstd.h" />
     <ClInclude Include="include\midobject.h" />
