--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -203,6 +203,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\interfmanager.cpp" />
     <ClCompile Include="src\itemcategory.cpp" />
     <ClCompile Include="src\itemtransferhooks.cpp" />
+    <ClCompile Include="src\iterators.cpp" />
     <ClCompile Include="src\listbox.cpp" />
     <ClCompile Include="src\log.cpp" />
     <ClCompile Include="src\lordtype.cpp" />
@@ -327,6 +328,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\itemvaluable.h" />
     <ClInclude Include="include\itemwand.h" />
     <ClInclude Include="include\itemweapon.h" />
+    <ClInclude Include="include\iterators.h" />
     <ClInclude Include="include\linkedlist.h" />
     <ClInclude Include="include\listbox.h" />
     <ClInclude Include="include\log.h" />
