Rework daily income logic
Scenario variables with special names can control daily income
for all races or specific one.
Income from capital can be also set using variables.

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -163,6 +163,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\netmessages.cpp" />
     <ClCompile Include="src\phase.cpp" />
     <ClCompile Include="src\pickupdropinterf.cpp" />
+    <ClCompile Include="src\playerincomehooks.cpp" />
     <ClCompile Include="src\racecategory.cpp" />
     <ClCompile Include="src\restrictions.cpp" />
     <ClCompile Include="src\scenariodata.cpp" />
@@ -324,6 +325,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\phasegame.h" />
     <ClInclude Include="include\pickupdropinterf.h" />
     <ClInclude Include="include\playerbuildings.h" />
+    <ClInclude Include="include\playerincomehooks.h" />
     <ClInclude Include="include\popupdialoginterf.h" />
     <ClInclude Include="include\position.h" />
     <ClInclude Include="include\presentation.h" />
