Fixes compilation of Detours for VS other than 2015 and for cases where output path contains spaces

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -140,7 +140,7 @@
     </Link>
     <PreBuildEvent>
       <Command>if not exist detours.lib (
-call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
+call ..\buildDetours.bat ..\Detours
 )</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
