--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -113,6 +113,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\attacksourcecat.cpp" />
     <ClCompile Include="src\autodialog.cpp" />
     <ClCompile Include="src\batattackdrain.cpp" />
+    <ClCompile Include="src\batattackdrainoverflow.cpp" />
     <ClCompile Include="src\batattackgiveattack.cpp" />
     <ClCompile Include="src\batattackshatter.cpp" />
     <ClCompile Include="src\battleattackinfo.cpp" />
@@ -196,6 +197,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\autodialog.h" />
     <ClInclude Include="include\batattack.h" />
     <ClInclude Include="include\batattackdrain.h" />
+    <ClInclude Include="include\batattackdrainoverflow.h" />
     <ClInclude Include="include\batattackgiveattack.h" />
     <ClInclude Include="include\batattackshatter.h" />
     <ClInclude Include="include\battleattackinfo.h" />
