--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -164,6 +164,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\midgardmsgbox.cpp" />
     <ClCompile Include="src\miditem.cpp" />
     <ClCompile Include="src\midmsgboxbuttonhandlerstd.cpp" />
+    <ClCompile Include="src\midmusic.cpp" />
     <ClCompile Include="src\midscenvariables.cpp" />
     <ClCompile Include="src\netmessages.cpp" />
     <ClCompile Include="src\phase.cpp" />
@@ -309,6 +310,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\miditem.h" />
     <ClInclude Include="include\midmsgboxbuttonhandler.h" />
     <ClInclude Include="include\midmsgboxbuttonhandlerstd.h" />
+    <ClInclude Include="include\midmusic.h" />
     <ClInclude Include="include\midobject.h" />
     <ClInclude Include="include\midplayer.h" />
     <ClInclude Include="include\midruin.h" />
