--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -261,6 +261,9 @@
     <ClCompile Include="src\ddcarryoveritems.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\midmusic.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="src\midgard.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
@@ -806,6 +809,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="include\ddcarryoveritems.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="include\midmusic.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
